Create BaseMetaSchema and BaseSchema classes to always include meta type
