# wagtail/api/v3/schemas/__init__.py
@@ -1,9 +1,11 @@
-from .base import ContentTypeSummarySchema
+from .base import BaseMetaSchema, BaseSchema, ContentTypeSummarySchema
 from .generator import generator
 from .pages import BasePageSchema, PageMetaSchema, build_page_schema_union
 from .sites import SiteInputSchema, SiteSchema
 
 __all__ = [
+    "BaseMetaSchema",
+    "BaseSchema",
     "ContentTypeSummarySchema",
     "generator",
     "BasePageSchema",
